--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,25 @@
 <head>
 	<title>Github Card</title>
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+
+	<script>
+		(function (l) {
+			if (l.search[1] === "/") {
+				var decoded = l.search
+					.slice(1)
+					.split("&")
+					.map(function (s) {
+						return s.replace(/~and~/g, "&");
+					})
+					.join("?");
+				window.history.replaceState(
+					null,
+					null,
+					l.pathname.slice(0, -1) + decoded + l.hash
+				);
+			}
+		})(window.location);
+	</script>
 </head>
 
 <body>
