migrated font css for speed :warning: :speedboat:

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Github Card</title>
-	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
+	<link href="/ibmplex.css" rel="stylesheet">
 
 	<script>
 		(function (l) {
