Revert "updated ibm plex sans url, was broken before :ribbon:"
This reverts commit 4a4f0a3aa162b8184a1870f526d10ee5e8945110.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Github Card</title>
-	<link href="./ibmplex.css" rel="stylesheet">
+	<link href="/ibmplex.css" rel="stylesheet">
 
 	<script>
 		(function (l) {
